<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="@string/airport"
        android:icon="@drawable/airport"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/car"
        android:icon="@drawable/car"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/boots"
        android:icon="@drawable/boots"
        android:orderInCategory="102"
        app:showAsAction="always" />

    <item  android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="104"
        app:showAsAction="never"  />
</menu>