<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/messageTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:hint="@string/messageHere"/>

    <TextView
        android:id="@+id/messageIDBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/IDHere"
        android:text=""
        android:textSize="20dp"
        android:layout_marginTop="108dp"
        android:layout_below="@+id/messageTextBox"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/deleteMessageBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/deleteThisMessage"
        android:layout_alignParentEnd="true" />

</RelativeLayout>